2002-01-11  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: remove dead checks. comment out APIC check,
	  hide grep output

	* module/Makefile.in: add compat.c

	* apic_up_compat.h: UP 2.2 missing defines. Need to investigate
	  fixmap situation. 

	* compat.c: move 2.2 dcache code here

	* compat.h: dcache compat support. check for whether we
	  should check for mptable. Don't do fixmap hack on 2.2 

	* op_dcache.h: shared dcache inline functions

	* op_syscalls.c: clean up dcache code for 2.2/2.4 

	* op_x86.c: update apic_need_setup for 2.2 and the possibility
	  of not enabling APIC support on 2.4 too. Needs checking ! Also
	  don't do mptable check on 2.2

	* oprofile.h: add missing include guard ;)
 
2002-01-11  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h: minor fixes
 
2002-01-11  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h: many change, can be used down to 2.2.8
	* module/oprofile.h: move #ifdef on kernel version to compat.h
	* module/op_util.c:
	* module/op_syscalls.c: minor change
	* configure.in: comment unnecessary stuf.

	* module/Makefile.in: missing include path for oprofile.s

2002-01-10  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: update checklist for dist

	* module/oprofile.h: add apparently needed version.h
 
2002-01-10  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: fix accidental trashing of BKCFLAGS

	* module/op_util.c: include right header

	* module/compat.h: use correct smp_call_function
 
2002-01-10  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h: new file include backward compatibility
	  stuff

2002-01-09  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: update infodragon's email
	  address
 
	* configure.in: bump to 0.0.9cvs
 
2002-01-08  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* configure.in: fix case when X isn't installed. Bump to 0.0.8
 
2002-01-07  John Levon  <moz@compsoc.man.ac.uk>

	* util/Makefile.in: "fix" last g++ 3.0 problem